--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,9 @@ body {
 }
 
 @media screen and (max-width: 480px) {
+  html, body {
+    overflow-x: hidden;
+  }
   .main-container {
     margin-top: 11rem;
   }
